--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/localize": "^14.2.0",
     "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@popperjs/core": "^2.10.2",
     "ag-grid-angular": "^28.2.1",
     "ag-grid-community": "^28.2.1",
     "akbari-date-picker": "^3.0.6",
